fix: runtime warnings with Java25
Fixed issue #3486

(cherry picked from commit 4b82425f13cde4ad60616b15102e7af17672809c)